Bug 1584538 - Allow debug environment proxy to access aliased module variables after the module script executes, r=jonco.

Differential Revision: https://phabricator.services.mozilla.com/D50747

--HG--
extra : moz-landing-system : lando